Add exports to fix certificate problem